<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeFragment">

    <TextView
        android:id="@+id/txv_home_tite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/std_margin"
        android:layout_marginTop="@dimen/dbl_margin"
        android:layout_marginEnd="@dimen/std_margin"
        android:text="@string/text_home_title"
        android:textColor="#5B2C6F"
        android:textSize="@dimen/title_sz"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txv_welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/std_margin"
        android:layout_marginTop="@dimen/dbl_margin"
        android:layout_marginEnd="@dimen/std_margin"
        android:text="@string/text_home_msg"
        android:textAlignment="center"
        android:textSize="@dimen/content_sz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_home_tite" />

    <Button
        android:id="@+id/btn_robots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/std_margin"
        android:layout_marginTop="@dimen/dbl_margin"
        android:layout_marginEnd="@dimen/std_margin"
        android:text="@string/btn_robot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="#8E44AD"
        app:layout_constraintTop_toBottomOf="@+id/txv_welcome" />

    <Button
        android:id="@+id/btn_students"
        android:layout_width="160sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/dbl_margin"
        android:layout_marginEnd="@dimen/std_margin"
        android:text="@string/btn_student"
        android:textAlignment="center"
        android:backgroundTint="#8E44AD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_robots" />
</androidx.constraintlayout.widget.ConstraintLayout>